Add Compass product page + misc updates

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -454,7 +454,7 @@
               <h2>Ontario</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <h4>Advanced Pressure Systems</h4>
+                  <h4>Riverstone Pressure Systems</h4>
                   <p><span class="grey">Location:</span>  Burlington, Ontario<br/>
                   <span class="grey">Phone:</span> (844) 932-5278<br/>
                   <span class="grey">Website:</span> <a href="https://advancedpressuresystems.ca/" target="_blank">www.advancedpressuresystems.ca</a></p>
