--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-19225233-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -7,7 +7,10 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-19225233-1');
-  </script>
+  </script> -->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PJDHVTX');</script>
+  <!-- End Google Tag Manager -->
   
   <!-- Start Pardot campaign tracking Code - Whitney, 04/2020 -->
   <script type='text/javascript'>
