further cleanup of ABX-3L-V3, etc.

--- a/_includes/downhole-dealers.html
+++ b/_includes/downhole-dealers.html
@@ -1,7 +1,8 @@
 <!-- Downhole Tab Content -->
 <div role="tabpanel" class="tab-pane" id="downhole-tab">
   <div class="row margin-bottom-120">
-    <p>Select your region below to view a list of <span class="bold" style="text-transform:uppercase">downhole tools dealers</span>.</p>
+    <p>Select your region below to view a list of <span class="bold" style="text-transform:uppercase">downhole tools dealers</span>.<br>
+    If you would like to speak with StoneAge directly about Downhole cleaning applications and our SpinCat line of tools,<br>contact Kevin Simmons at 970-259-2869<br><a href="mailto:kevin.simmons@stoneagetools.com">kevin.simmons@stoneagetools.com</a></p>
 <!--
     <table class="table table-responsive">
       <tr>
@@ -28,11 +29,11 @@
             <li class="list-group-item">
               <div class="row first">
                 <div class="dealer">
-                    <h4>Nanjing Fedjetting Tech Co. Ltd</h4>
-                    <p><span class="text-danger"><i class="fa fa-wrench"></i> <em>Authorized Parts &amp; Tools, No Automation</em></span><br />
-                    <span class="grey">Location:</span> Nanjing, China<br/>
-                    <span class="grey">Phone:</span> (+86) 25 5215 7501<br/>
-                    <span class="grey">Website:</span> <a href="http://www.fedjetting.com/" target="_blank">www.fedjetting.com</a>
+                    <h4>Guangzhou Leadjetting Technology Co. Ltd</h4>
+                    <p>
+                    <span class="grey">Location:</span> Guangzhou, China<br/>
+                    <span class="grey">Phone:</span> +86 18011829862<br/>
+                    <span class="grey">Website:</span> <a href="http://www.leadjetting.com" target="_blank">www.leadjetting.com</a>
                     </p>
                   </div>
               </div>
