--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -755,6 +755,8 @@
               <li><a href="#Colombia" class="region">Colombia</a></li>
               <li><a href="#Guatemala" class="region">Guatemala</a></li>
               <li><a href="#Mexico" class="region">Mexico</a></li>
+              <li><a href="#Paraguay" class="region">Paraguay</a></li>
+              <li><a href="#Uruguay" class="region">Uruguay</a></li>
             </ul>
           </div>
           <ul class="list-group">
@@ -766,7 +768,7 @@
                   <div class="dealer">
                     <h4>Flow International Corporation</h4>
                     <p>
-                    <span class="grey">Location:</span> Buenos Aires<br/>
+                    <span class="grey">Location:</span> Buenos Aires, Argentina<br/>
                     <span class="grey">Phone:</span> (+54) 11 4700 - 8881<br/>
                     <span class="grey">Website:</span> <a href="https://www.flowwaterjet.com/" target="_blank">www.flowwaterjet.com</a>
                     </p>
@@ -791,7 +793,7 @@
                   <div class="dealer">
                     <h4>Flow International Corporation</h4>
                     <p>
-                    <span class="grey">Location:</span> São Paulo<br/>
+                    <span class="grey">Location:</span> São Paulo, Brazil<br/>
                     <span class="grey">Phone:</span> +55-11-3616-2820<br/>
                     <span class="grey">Website:</span> <a href="https://www.flowwaterjet.com" target="_blank">www.flowwaterjet.com</a>
                     </p>
@@ -810,12 +812,11 @@
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>Orbitec</h4>
+                    <h4>Flow International Corporation</h4>
                     <p>
-                    <span class="grey">Location:</span> Santiago<br/>
-                    <span class="grey">Phone:</span> +56-2-2429 4190<br/>
-                    <span class="grey">Website:</span> <a href="http://www.orbitec.cl" target="_blank">www.orbitec.cl</a><br/>
-                    <small><em>Serving Bolivia, Chile, Ecuador, Peru, and Uruguay</em></small>
+                    <span class="grey">Location:</span> Buenos Aires, Argentina<br/>
+                    <span class="grey">Phone:</span> (+54) 11 4700 - 8881<br/>
+                    <span class="grey">Website:</span> <a href="https://www.flowwaterjet.com/" target="_blank">www.flowwaterjet.com</a>
                     </p>
                   </div>
                 </div>
@@ -834,7 +835,7 @@
                   <div class="dealer">
                     <h4>Aquatool</h4>
                     <p>
-                    <span class="grey">Location:</span> Bogota<br/>
+                    <span class="grey">Location:</span> Bogota, Colombia<br/>
                     <span class="grey">Phone:</span> +57 (1) 4077083<br/>
                     <span class="grey">Website:</span> <a href="http://www.aquatool.net" target="_blank">www.aquatool.net</a>
                     </p>
@@ -855,7 +856,7 @@
                   <div class="dealer">
                     <h4>TecnoSagot S.A.</h4>
                     <p>
-                    <span class="grey">Location:</span> Sacatepequez<br/>
+                    <span class="grey">Location:</span> Sacatepequez, Guatemala<br/>
                     <span class="grey">Phone:</span> (+502) 787 99490<br/>
                     <span class="grey">Website:</span> <a href="http://tecnosagot.com/" target="_blank">www.tecnosagot.com</a>
                     </p>
@@ -876,10 +877,52 @@
                   <div class="dealer">
                     <h4>Comuniv S.A. de C.V.</h4>
                     <p>
-                    <span class="grey">Location:</span> Tamaulipas<br/>
+                    <span class="grey">Location:</span> Tamaulipas, Mexico<br/>
                     <span class="grey">Phone:</span> (+52) 83 3210 1747<br/>
 <!--                    <span class="grey">Website:</span> <a href="http://www.comuniv.com.mx" target="_blank">www.comuniv.com.mx</a><br/>-->
                     <span class="grey">Email:</span> <a href="mailto:contacto@comuniv.com.mx">contacto@comuniv.com.mx</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="Paraguay">Paraguay</h2>
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Flow International Corporation</h4>
+                    <p>
+                    <span class="grey">Location:</span> Buenos Aires, Argentine<br/>
+                    <span class="grey">Phone:</span> (+54) 11 4700 - 8881<br/>
+                    <span class="grey">Website:</span> <a href="https://www.flowwaterjet.com/" target="_blank">www.flowwaterjet.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="Uruguay">Uruguay</h2>
+              <!-- 1st row -->
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Flow International Corporation</h4>
+                    <p>
+                    <span class="grey">Location:</span> Buenos Aires, Argentine<br/>
+                    <span class="grey">Phone:</span> (+54) 11 4700 - 8881<br/>
+                    <span class="grey">Website:</span> <a href="https://www.flowwaterjet.com/" target="_blank">www.flowwaterjet.com</a>
                     </p>
                   </div>
                 </div>
