misc updates, including GTM testing for Rentals and Sentinel

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PJDHVTX');</script>
   <!-- End Google Tag Manager -->
   
-  <!-- Start Pardot campaign tracking Code - Whitney, 04/2020 -->
+  <!-- Start Pardot campaign tracking Code - Whitney, 04/2020
   <script type='text/javascript'>
   piAId = '645393';
   piCId = '33387';
@@ -64,7 +64,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/media.css">
   
-  <!-- Facebook Pixel Code -->
+  <!-- Facebook Pixel Code 
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};
