--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
   
   <body id="top" class="{{ page.page-type}}">
-    <!-- Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript)
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PJDHVTX" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
   
@@ -14,6 +14,56 @@
 
     {% include footer.html %}
 
+    <!-- GCLID -->
+    <script>
+
+      function getParam(p) {
+        var match = RegExp('[?&]' + p + '=([^&]*)').exec(window.location.search);
+        return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+      }
+
+      function getExpiryRecord(value) {
+        var expiryPeriod = 90 * 24 * 60 * 60 * 1000; // 90 day expiry in milliseconds
+
+        var expiryDate = new Date().getTime() + expiryPeriod;
+        return {
+          value: value,
+          expiryDate: expiryDate
+        };
+      }
+
+      function addGclid() {
+        var gclidParam = getParam('gclid');
+        var gclidFormFields = ['gclid_field', 'foobar']; // all possible gclid form field ids here
+        var gclidRecord = null;
+        var currGclidFormField;
+
+        var gclsrcParam = getParam('gclsrc');
+        var isGclsrcValid = !gclsrcParam || gclsrcParam.indexOf('aw') !== -1;
+
+        gclidFormFields.forEach(function (field) {
+          if (document.getElementById(field)) {
+            currGclidFormField = document.getElementById(field);
+          }
+        });
+
+        if (gclidParam && isGclsrcValid) {
+          gclidRecord = getExpiryRecord(gclidParam);
+          localStorage.setItem('gclid', JSON.stringify(gclidRecord));
+        }
+
+        var gclid = gclidRecord || JSON.parse(localStorage.getItem('gclid'));
+        var isGclidValid = gclid && new Date().getTime() < gclid.expiryDate;
+
+        if (currGclidFormField && isGclidValid) {
+          currGclidFormField.value = gclid.value;
+        }
+      }
+
+      window.addEventListener('load', addGclid);
+
+    </script>
+    <!-- END GCLID -->
   </body>
 
 </html>
