--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,6 +35,7 @@
         <ul class="list-unstyled list-inline social">
           <li><a href="https://www.youtube.com/channel/UCdK135J8Z9uHdG67eJ08LyA" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
           <li><a href="https://www.linkedin.com/company/stone-age-waterblast-tools" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+          <li><a href="https://www.instagram.com/stoneagetools/" target="_blank"><i class="fa fa-instagram"></i></a></li>
           <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i></a></li>
           <li><a href="https://twitter.com/stoneagetools" target="_blank"><i class="fa fa-twitter"></i></a></li>
         </ul>
@@ -136,17 +137,6 @@
         $('#wb-tab').addClass('active');
       };
     </script>
-  
-  <!-- Start of Async HubSpot Analytics Code -->
-  <script type="text/javascript">
-    (function(d,s,i,r) {
-    if (d.getElementById(i)){return;}
-    var n=d.createElement(s),e=d.getElementsByTagName(s)[0];
-    n.id=i;n.src='//js.hs-analytics.net/analytics/'+(Math.ceil(new Date()/r)*r)+'/1875880.js';
-    e.parentNode.insertBefore(n, e);
-    })(document,"script","hs-analytics",300000);
-  </script>
-  <!-- End of Async HubSpot Analytics Code --> 
 
   <!-- Start LinkedIn Insight Tage Code -->
   <script type="text/javascript"> _linkedin_partner_id = "1448866"; window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || []; window._linkedin_data_partner_ids.push(_linkedin_partner_id); </script><script type="text/javascript"> (function(){var s = document.getElementsByTagName("script")[0]; var b = document.createElement("script"); b.type = "text/javascript";b.async = true; b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js"; s.parentNode.insertBefore(b, s);})(); </script> <noscript> <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=1448866&fmt=gif" /> </noscript>
