add resouces to Sentinel landing page, plus misc

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -958,12 +958,12 @@
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
-                    <h4>Drexel Oilfield Equipment</h4>
+                    <h4>Ariegsa</h4>
                     <p>
-                    <span class="grey">Location:</span> Cairo, Egypt<br/>
-                    <span class="grey">Phone:</span> +202 27036444<br/>
-                    <span class="grey">Website:</span> <a href="https://drexelegypt.com" target="_blank">www.drexelegypt.com</a><br/>
-                    <span class="grey">Email:</span> <a href="mailto:inquiries@drexelegypt.com" target="_blank">inquiries@drexelegypt.com</a>
+                    <span class="grey">Location:</span> 10th Of Ramadan City, Egypt<br/>
+                    <span class="grey">Phone:</span> (+2) 055 – 4411396 / 4411397<br/>
+                    <span class="grey">Website:</span> <a href="https://www.ariegsa.com/" target="_blank">www.ariegsa.com</a><br/>
+                    <span class="grey">Email:</span> <a href="mailto:sales@ariegsa.com" target="_blank">sales@ariegsa.com</a>
                     </p>
                   </div>
                 </div>
